--- a/package.json
+++ b/package.json
@@ -42,24 +42,30 @@
   },
   "homepage": "https://github.com/markneh/react-native-esim#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.12.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@react-native-community/bob": "^0.16.2",
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.19",
-    "@types/react-native": "0.62.13",
+    "@types/react": "^17.0.44",
+    "@types/react-native": "^0.67.4",
+    "babel-jest": "^26.6.3",
     "commitlint": "^8.3.5",
     "dotenv-cli": "^4.0.0",
-    "eslint": "^7.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.67.0",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "17.0.2",
+    "react-native": "0.68.1",
+    "react-native-builder-bob": "^0.18.2",
+    "react-test-renderer": "17.0.2",
     "release-it": "^13.5.8",
     "typescript": "^3.8.3"
   },
@@ -131,7 +137,7 @@
     "trailingComma": "es5",
     "useTabs": false
   },
-  "@react-native-community/bob": {
+  "react-native-builder-bob": {
     "source": "src",
     "output": "lib",
     "targets": [
