--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -119,6 +119,7 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
+  ndkVersion rootProject.ext.ndkVersion
   compileSdkVersion rootProject.ext.compileSdkVersion
 
   defaultConfig {
@@ -211,7 +212,7 @@ dependencies {
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
-  from configurations.compile
+  from configurations.implementation
   into 'libs'
 }
 
