--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -2,13 +2,15 @@
 
 buildscript {
     ext {
-        minSdkVersion = 21
-        compileSdkVersion = 30
-        targetSdkVersion = 30
+      buildToolsVersion = "30.0.2"
+      minSdkVersion = 21
+      compileSdkVersion = 30
+      targetSdkVersion = 30
+      ndkVersion = "21.4.7075529"
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
@@ -20,7 +22,6 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -29,9 +30,14 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
+        mavenCentral {
+          // We don't want to fetch react-native from Maven Central as there are
+          // older versions over there.
+          content {
+            excludeGroup "com.facebook.react"
+          }
+        }
         google()
-        jcenter()
         maven { url 'https://www.jitpack.io' }
     }
 }
